src/scss/components/_contact.scss
/* ... */
.overview-step__title {
  display: none;
  margin: 0 0 .5em;
  color: $cl-white;
  font-size: 2rem;

  [disabled] & {
    color: $cl-quinary;
  }

  @include media($screen-lg) {
    display: block;
  }
}

.overview-step__content {
  display: none;
  overflow: hidden;
  margin: 0;
  color: transparentize($cl-white, .4);
  font-size: 1.8rem;
  line-height: 1.5;
  white-space: pre;
  text-overflow: ellipsis;

  @include media($screen-lg) {
    display: block;
  }
}

.team-overview {
  width: 100%;
  margin: 0 auto;
  overflow: hidden;
}

.team-overview__members {
  margin: 3rem 0 0;
  min-height: 7rem;

  &:empty {

    &::before {
      content: 'Insert team members here';
      display: flex;
      align-items: center;
      justify-content: center;
      height: 6rem;
      border: .1rem dashed lighten($cl-body, 30%);
      margin: 0 2rem;
      border-radius: 1.33em * .33;
      color: lighten($cl-body, 30%);
      animation: pulse 200ms;

      @include media($screen-sm) {
        margin: 0 1rem;
      }
    }
  }

  .cart-item {
    @include media($screen-lg) {
      width: 50%;
      float: left;
    }
  }
}

.team-overview__title {

  a {
    color: $cl-primary;
    text-decoration: underline;
  }
}

.overview-member {
  max-height: 4em;
  transition: {
    property: transform, opacity, max-height, padding;
    timing-function: linear;
    duration: 200ms;
  };

  &.is-removed {
    transform: scale(.8);
    max-height: 0;
    opacity: 0;
  }

  &--placeholder {
    max-height: 6em;
  }
}

.overview-member__content {
  display: flex;
  align-items: center;
  width: calc(100% - $cart-margin * 2);
  margin: 0 0 $cart-margin;
  padding: $cart-margin;
  border-radius: 1.33em * .33;
  overflow: hidden;
  box-shadow:
    0 3px 2px -2px transparentize($cl-body, .7),
    0 3px 8px -2px transparentize($cl-body, .7);


  &--placeholder {
    flex-direction: column;
    box-shadow: none;
    text-align: center;

    &::before {
      content: '';
      display: block;
      width: 2em;
      height: 2em;
      margin-bottom: .5em;
      background: {
        image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#{$cl-body}" d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
        size: contain;
      }
    }
  }

  > * {
    flex-shrink: 0;
  }
}

.overview-member__image {
  width: 2em;
  height: 2em;
  margin-right: 1ch;
  border-radius: 50%;
  background-size: cover;
}

.overview-member__title {
  font-size: 1em;
  line-height: 1;
  color: $cl-body;
}

.overview-member__remove {
  width: 1.5em;
  height: 1.5em;
  margin-left: auto;
  background: {
    image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#{$cl-body}" d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>');
    size: 1.33em;
    repeat: no-repeat;
    position: 50%;
  };
  cursor: pointer;
}

